--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "mapbox-gl": "^2.7.0",
     "stimulus": "^3.0.1",
